--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "formic": "^0.0.10",
     "formik": "^2.4.1",
+    "jwt-decode": "^3.1.2",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "yup": "^1.2.0"
